@@ -1,10 +1,12 @@
 #!/usr/bin/env tesh
 
-! output sort
 $ ${bindir:=.}/s4u-exec-dependent ${platfdir}/small_platform.xml --log=s4u_activity.t:verbose "--log=root.fmt:[%10.6r]%e(%i:%a@%h)%e%m%n"
+> [  0.000000] (1:worker@Fafard) Activity 'child' vetoed. Dependencies: NOT solved; Ressources: NOT assigned
 > [  2.000000] (1:worker@Fafard) Remove a dependency from 'parent 1' on 'child'
 > [  2.000000] (1:worker@Fafard) Exec 'parent 1' is complete
 > [  3.000000] (1:worker@Fafard) Remove a dependency from 'parent 2' on 'child'
+> [  3.000000] (1:worker@Fafard) Activity 'child' vetoed. Dependencies: solved; Ressources: NOT assigned
+> [  3.000000] (1:worker@Fafard) Activity child's dependencies are resolved. Let's assign it to Fafard.
 > [  3.000000] (1:worker@Fafard) 'child' is assigned to a resource and all dependencies are solved. Let's start
 > [  3.000000] (1:worker@Fafard) Exec 'parent 2' is complete
 > [  4.000000] (1:worker@Fafard) Exec 'child' is complete
